clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-of-func-params/await-expr-of-func-params.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

int t() {
    return 42;
}

int test(int a, int b) {
    return 42;
}

async int f(int start) {
  t();
  test(await read(2), await read(2)); // #1
  test(2,3);
  test(t(), await read(2)); // #2

  int result = await read(1);
  return result;
}

// expected-error@#1 {{await expression is not allowed to appear in function parameters}}
// expected-error@#2 {{await expression is not allowed to appear in function parameters}}

int main() {
  return 0;
}
